Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,7 @@
       link: /slidedecks
       open_in_new_window: false
     - name: Workshops & Events
-      link: >-
-        https://chipublib.bibliocommons.com/events/search/fq=program:(53f20a07e04c1e3b1c00d3e4)
+      link: 'https://bit.ly/cplmakerschedule'
       open_in_new_window: true
     - name: Videos
       link: 'https://www.youtube.com/channel/UCgYrYjnoluGLUl-fdpSMSJQ/videos'
