--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -2,15 +2,15 @@
   link: 'https://github.com/cplmakerlab'
   social_icon: Github
   new_window: true
-- name:
+- name: Instagram
   link: 'https://instagram.com/cplmakerlab'
   social_icon: Instagram
   new_window: true
-- name:
+- name: Twitter
   link: 'https://twitter.com/cplmakerlab'
   social_icon: Twitter
   new_window: true
-- name:
+- name: Youtube
   link: 'https://youtube.com/c/cplmakerlab'
   social_icon: YouTube
   new_window: true
