--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,16 +1,20 @@
-- name: Github
+- name:
   link: 'https://github.com/cplmakerlab'
   social_icon: Github
   new_window: true
-- name: Instagram
+- name:
   link: 'https://instagram.com/cplmakerlab'
   social_icon: Instagram
   new_window: true
-- name: Twitter
+- name:
   link: 'https://twitter.com/cplmakerlab'
   social_icon: Twitter
   new_window: true
-- name: Youtube
+- name:
   link: 'https://youtube.com/c/cplmakerlab'
   social_icon: YouTube
+  new_window: true
+- name:
+  link: 'mailto:makerspace@chipublib.org'
+  social_icon: Email
   new_window: true
