--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,18 +8,18 @@
     - name: How-To Guides
       link: /guides
       open_in_new_window: false
-    - name: Slide Decks
-      link: /slidedecks
-      open_in_new_window: false
     - name: Workshops & Events
       link: 'https://bit.ly/cplmakerschedule'
       open_in_new_window: true
+    - name: Jobs & Career Training
+      link: /education-training
+      open_in_new_window: false
+    - name: Slide Decks
+      link: /slidedecks
+      open_in_new_window: false
     - name: Videos
       link: 'https://www.youtube.com/channel/UCgYrYjnoluGLUl-fdpSMSJQ/videos'
       open_in_new_window: true
-    - name: Jobs & Career Training
-      link: /continuing-education
-      open_in_new_window: false
 - name: Make
   link: /software
   subnav:
