Updated '_data/footer.yml' via CloudCannon

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -14,11 +14,11 @@ links:
   - name:
     link: 'https://youtube.com/c/cplmakerlab'
     social_icon: YouTube
-    new_window: true    
+    new_window: true
 content_markdown: >-
   makerspace@chipublib.org \| (312) 747-4300 \| 400 S State St 3rd Floor,
   Chicago, IL, 60605<br>[CPL Digital Toolbox
-  Archive](https://sites.google.com/site/cplmakerlab){: target="_blank"
-  rel="noopener"} \|
-  [Admin](https://app.cloudcannon.com/30680/editor#/site/82447/explore){:
-  target="_blank" rel="noopener"}
+  Archive](https://sites.google.com/site/cplmakerlab){: target="_blank"} \|
+  [Staff Training Guides](https://cplmakerlab.github.io/tags#Staff) \|
+  [Login](https://app.cloudcannon.com/30680/editor#/site/82447/explore){:
+  target="_blank"}
