Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -39,7 +39,7 @@
     - name: Blog
       link: /blog
       open_in_new_window: false
-    - name: Local organizations
+    - name: Orgs we love
       link: /organizations
       open_in_new_window: false
     - name: Nation of Makers
