--- a/_config.yml
+++ b/_config.yml
@@ -159,9 +159,9 @@ slide_themes:
 
 uploads_dir: "uploads/:title"
 
-background_size:
-  - cover
-  - contain
+background_sizes:
+  cover: Fill screen
+  contain: Fit to screen
   
 # Complex array structures
 # See: https://docs.cloudcannon.com/editing/options/input-options/#array-structures
@@ -175,7 +175,7 @@ _array_structures:
         content_markdown:
         background_color:
         background_image:
-        background_size: cover
+        background_size:
 
 # CloudCannon Explore UI Settings
 _explore:
