Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -52,4 +52,7 @@
     - name: Makers In Chicago
       link: 'http://makersinchicago.org'
       open_in_new_window: true
+    - name: Illinois PPE Network
+      link: 'https://www.illinoisppe.org/'
+      open_in_new_window: true
 ---
