Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@
   link: /
   open_in_new_window: false
 - name: Learn
-  link: /guides
+  link: /learn
   open_in_new_window: false
   subnav:
     - name: How-To Guides
