Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,6 +21,10 @@
     - name: Videos
       link: 'https://www.youtube.com/channel/UCgYrYjnoluGLUl-fdpSMSJQ/videos'
       open_in_new_window: true
+    - name: Ask-a-Maker
+      link: >-
+        https://www.chipublib.org/maker-lab/ask-a-maker-request-help-from-the-maker-lab/
+      open_in_new_window: true
 - name: Make
   link: /software
   subnav:
