--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,3 +1,4 @@
+---
 links:
   - name:
     link: 'mailto:makerspace@chipublib.org'
@@ -17,8 +18,11 @@ links:
     new_window: true
 content_markdown: >-
   makerspace@chipublib.org \| (312) 747-4300 \| 400 S State St 3rd Floor,
-  Chicago, IL, 60605<br>[CPL Digital Toolbox
+  Chicago, IL, 60605<br>[Fork this
+  site](https://github.com/cplmakerlab/cplmakerlab.github.io){: target="_blank"
+  rel="noopener"} \| [CPL Digital Toolbox
   Archive](https://sites.google.com/site/cplmakerlab){: target="_blank"} \|
   [Staff Training Guides](https://cplmakerlab.github.io/tags#Staff) \|
   [Login](https://app.cloudcannon.com/30680/editor#/site/82447/explore){:
   target="_blank"}
+---
