--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -54,6 +54,9 @@
     - name: Photos
       link: 'http://bit.ly/cplmakerphotos'
       open_in_new_window: true
+    - name: Illinois PPE Network
+      link: 'https://www.illinoisppe.org/'
+      open_in_new_window: true
     - name: Makers In Chicago
       link: 'http://makersinchicago.org'
       open_in_new_window: true
