Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: Chicago Public Library Maker Lab
-url: "https://cplmakerlab.github.io/"
+url: "https://cplmakerlab.github.io"
 baseurl:
 google_analytics_key:
 disqus_shortname:
