--- a/_config.yml
+++ b/_config.yml
@@ -188,7 +188,7 @@ _explore:
     - heading: Pages
       collections:
         - site_pages
-    - heading: How-To & Resource Guides
+    - heading: How-To + Resource Guides
       collections:
         - guides   
     - heading: Slide Decks
