Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@
   link: /learn
   open_in_new_window: false
   subnav:
-    - name: How-To Guides
+    - name: How-To & Resource Guides
       link: /guides
       open_in_new_window: false
     - name: Workshops & Events
