Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@
       link: /slidedecks
       open_in_new_window: false
     - name: Worksheets
-      link: https://cplmakerlab.github.io/worksheets
+      link: /worksheets
       open_in_new_window: true
     - name: Videos
       link: https://www.youtube.com/channel/UCgYrYjnoluGLUl-fdpSMSJQ/videos
